<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notifications_main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/notifications_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/main_fragment_notifications_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:drawableStartCompat="@drawable/ic_baseline_notifications_active_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notifications_enabled_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/main_fragment_enabled"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sdk"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintBottom_toBottomOf="@+id/notifications_enabled_label"
                app:layout_constraintStart_toEndOf="@+id/notifications_enabled_label" />

            <TextView
                android:id="@+id/notifications_allowed_ui_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_fragment_allowed_ui"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_enabled_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sdk"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintBottom_toBottomOf="@+id/notifications_allowed_ui_label"
                app:layout_constraintStart_toEndOf="@+id/notifications_allowed_ui_label" />

            <TextView
                android:id="@+id/notifications_permission_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_fragment_permission"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_allowed_ui_label" />

            <TextView
                android:id="@+id/notifications_enabled_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notifications_enabled_label"
                tools:text="True" />

            <TextView
                android:id="@+id/notifications_allowed_ui_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notifications_allowed_ui_label"
                tools:text="True" />

            <TextView
                android:id="@+id/notifications_permission_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notifications_permission_label"
                tools:text="True" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/simple_line_notifications_tags"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/material_dynamic_neutral20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_main_card" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inbox_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_main_card">

            <TextView
                android:id="@+id/inbox_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/main_fragment_inbox_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:drawableStartCompat="@drawable/ic_baseline_inbox_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/inbox_badge_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inbox_badge_label"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_badge_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/white"
                android:visibility="gone"
                app:autoSizeMaxTextSize="10sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/inbox_chevron"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp"
                tools:text="99+"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/inbox_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnSurfaceVariant"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
